@@ -16,7 +16,7 @@ L1Topo::L1TopoTOB decoded   to word 0x82000112
 ** test8: L1Topo::L1TopoTOB index, clock and fpga decoding **
 ** test9: L1Topo::getCTPbits **
 L1TopoRDO:
-     SourceID: 0x00910080
+     SourceID: 0x00910080 ROI
      Errors: []
      Status words:
      Data words:
@@ -29,7 +29,7 @@ L1TopoRDO:
      0x860007b0      L1Topo TOB:  ctp_signal 0x6 ( index 0 clock 1 fpga 1 ) overflow bits 0b00000111 trigger bits 0b10110000
      0x87000800      L1Topo TOB:  ctp_signal 0x7 ( index 1 clock 1 fpga 1 ) overflow bits 0b00001000 trigger bits 0b00000000
 L1TopoRDO:
-     SourceID: 0x00910090
+     SourceID: 0x00910090 ROI
      Errors: []
      Status words:
      Data words:
@@ -82,11 +82,13 @@ L1Topo::Fibre re-encoded to word 0xd0440668
 L1Topo::Status  decoded from word 0xe8000000
 L1Topo::Status re-encoded to word 0xe8000000
 ** test14: L1Topo::ModuleID encode+decode **
-ModuleID: 128 0x0080 0b10000000 link 0  module 0 ROI
-ModuleID: 1 0x0001 0b00000001 link 1  module 0 DAQ
-ModuleID: 144 0x0090 0b10010000 link 0  module 1 ROI
-ModuleID: 17 0x0011 0b00010001 link 1  module 1 DAQ
-ModuleID: 128 0x0080 0b10000000 link 0  module 0 ROI
-ModuleID: 1 0x0001 0b00000001 link 1  module 0 DAQ
-ModuleID: 144 0x0090 0b10010000 link 0  module 1 ROI
-ModuleID: 17 0x0011 0b00010001 link 1  module 1 DAQ
+ModuleID:  000000 0b00000000 link 0  module 0 DAQ
+ModuleID:  0x0081 0b10000001 link 1  module 0 ROI
+ModuleID:  0x0010 0b00010000 link 0  module 1 DAQ
+ModuleID:  0x0091 0b10010001 link 1  module 1 ROI
+ModuleID:  0x0092 0b10010010 link 2  module 1 ROI
+ModuleID:  000000 0b00000000 link 0  module 0 DAQ
+ModuleID:  0x0081 0b10000001 link 1  module 0 ROI
+ModuleID:  0x0010 0b00010000 link 0  module 1 DAQ
+ModuleID:  0x0091 0b10010001 link 1  module 1 ROI
+ModuleID:  0x0092 0b10010010 link 2  module 1 ROI
