@@ -1,3 +1,11 @@
+2015-03-08  Simon George  <S.George@rhul.ac.uk>
+
+	* test/L1TopoRDO_test.cxx (test14): update ModuleID unit tests for
+	numbering scheme correction.
+	* L1TopoRDO/ModuleID.h: Update documentation about module
+	numbering scheme.
+	* L1TopoRDO-00-00-07
+
 2015-03-06  Simon George  <s.george@rhul.ac.uk>
 
 	* test/L1TopoRDO_test.cxx (test14): add test for ModuleID class and update reference
